crates/uitest/fixtures/ty_check/tuple.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/tuple.fe
---
error[8-0000]: type mismatch
  ┌─ tuple.fe:2:31
  │
2 │     let x: (i32, u32, bool) = (1, 2)
  │                               ^^^^^^ expected `(i32, u32, bool)`, but `({integer}, {integer})` is given

error[8-0000]: type mismatch
  ┌─ tuple.fe:4:30
  │
4 │     let y: (i32, bool) = (1, 2)
  │                              ^ expected `bool`, but `{integer}` is given

error[8-0032]: type annotation is needed
  ┌─ tuple.fe:2:32
  │
2 │     let x: (i32, u32, bool) = (1, 2)
  │                                ^
  │                                │
  │                                type annotation is needed
  │                                no default type is provided for an integer type. consider giving integer type

error[8-0032]: type annotation is needed
  ┌─ tuple.fe:2:35
  │
2 │     let x: (i32, u32, bool) = (1, 2)
  │                                   ^
  │                                   │
  │                                   type annotation is needed
  │                                   no default type is provided for an integer type. consider giving integer type


